--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,8 @@ nav  ul  li  a {
     padding-right: 120px;
 }
 .gadgets-slide h1 {
-    font-size: 41px;
+    font-size: 40px;
+    font-weight: 600;
 }
 .gadgets-slide p {
     color: #707070;
@@ -56,6 +57,11 @@ nav  ul  li  a {
 
 .smartphone-top h6, .laptop-top h6 {
     color: #FF9D00;
+    font-weight: 600;
+}
+
+.smartphone-top h3, .laptop-top h3, .category-header h3 {
+    font-weight: 600;
 }
 
 .smartphone-top a, .laptop-top a {
@@ -88,4 +94,43 @@ nav  ul  li  a {
 .card-text {
     color:#707070;
     font-size: 15px;
+}
+
+.categories {
+    margin-bottom: 150px;
+}
+
+.category-header {
+    margin-bottom: 50px;
+}
+
+.category-header hr {
+    background-color:#FF9C35;
+    width: 125px;
+    height: 9px;
+    border-radius: 10px;
+}
+
+.cat {
+    width: 250px;
+    height: 270px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+}
+
+.cat h5 {
+    font-weight: 600;
+    text-align:center;
+}
+
+.common-cat {
+    padding-top: 35px;
+}
+
+.cat-shoes {
+    padding-top: 10px;
+}
+
+.inner-margin {
+    margin-bottom: 30px;
 }
